# tools-Fluka

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  esegui_fluka  fluka_reader.cpp  fluka_reader.h  mgdraw_case3_binary_converter.f  source.f  test.flair  test.inp  usrbdx_binning.cpp
fortran-modules-for-Fluka/: mgdraw.f
script-bash/: Launcher_FLUKA_batch.sh  postproc.sh
script-gnuplot/: Espec.plt  Etheta.plt  electron_energy.plt  ion_energy.plt  proton_energy.plt  spettri_elettroni.plt  spettri_protoni.plt  spettroAngoloElettroniFine.plt  spettroAngoloElettroniInizio.plt  spettroAngoloProtoniFine.plt  spettroAngoloProtoniInizio.plt  spettroEnergiaElettroniFine.plt  spettroEnergiaElettroniInizio.plt  spettroEnergiaProtoniFine.plt  spettroEnergiaProtoniInizio.plt  spettro_elettroni.plt  spettro_elettroni_angolo.plt  spettro_elettroni_cumulativo.plt  spettro_protoni.plt  spettro_protoni_angolo.plt  spettro_protoni_cumulativo.plt  spettro_protoni_slice.plt  xpx.plt
